# photochooser

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  fill_database.sh
db/: init.sql
frontend/: app.py  models.py
src/: main.rs  models.rs
src/controllers/: album.rs  invitation.rs  mod.rs  photo.rs  selections.rs  user.rs
